--- a/app/views/mail/mail.view.html
+++ b/app/views/mail/mail.view.html
@@ -11,8 +11,8 @@
     <tbody>
         <tr ng-repeat="mail in mails">
             <td>{{ mail["subject"]}}</td>    
-            <td>{{ mail["from"] }}</td>
-            <td>{{ mail["to"] }}</td>
+            <td ng-bind-html="mail.from | ashtml"></td>
+            <td ng-bind-html="mail.to | ashtml"></td>
             <td>{{ mail["dated"] }}</td>
         </tr>
     </tbody>
