--- a/app/views/user/login.view.html
+++ b/app/views/user/login.view.html
@@ -2,7 +2,7 @@
     <h2>Q3 Web Mail</h2>
     <form name="form" ng-submit="vm.login()" role="form">
         <div class="form-group" ng-class="{ 'has-error': form.username.$dirty && form.username.$error.required }">
-            <label for="username">Username</label>
+            <label for="username">Email Id</label>
             <input type="text" name="username" id="username" class="form-control" ng-model="vm.username" required />
             <span ng-show="form.username.$dirty && form.username.$error.required" class="help-block">Username is required</span>
         </div>
