--- a/app/views/mail/mail.view.html
+++ b/app/views/mail/mail.view.html
@@ -48,6 +48,8 @@
     <strong>From : </strong><span ng-bind-html="email_from"></span><br/>
     <strong>To : </strong><span ng-bind-html="email_to"></span><br/>
     <strong>CC : </strong><span ng-bind-html="email_cc"></span><br/>
+    <strong>Attachment(s) : </strong><span ng-bind-html="email_attachments"></span><br/>
+    
     <div ng-bind-html="email_body" id="mailBody">
     </div>
     </div>
